# aioqsw

./: .gitignore  MANIFEST.in  README.md  pylintrc  pyproject.toml  requirements.txt  requirements_lint.txt  setup.py
.github/workflows/: ci.yml
aioqsw/: __init__.py  const.py  device.py  exceptions.py  localapi.py
examples/: _config.py  basic.py  check-firmware-update.py  config-backup.py  duplicated-login.py  reboot.py
